[UI] Fix overflow of app authors field

--- a/css/styles.css
+++ b/css/styles.css
@@ -341,12 +341,16 @@ a:hover {
   top: 0;
   margin: 15px;
   z-index: 2;
+  width: 80%;
 }
 .app-authors-field {
   right: 0;
   position: absolute;
   bottom: 0;
   margin: 15px;
+  width: 80%;
+  white-space: unset;
+  line-clamp: 2;
 }
 .app-title {
   max-height: 35px;
